Kubernetes/jmaze-k8s-cilium/media/sonarr/http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  hostnames:
    - sonarr.media.jmaz.tv
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: media # name of the gateway listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr-ds1522
          port: 8989
          kind: Service
